add author info and update readme

--- a/project.json
+++ b/project.json
@@ -1,6 +1,6 @@
 {
 	"contentrating" : "Everyone",
-	"description" : "Dark sliding clock that is perfectly matched with the windows 10 taskbar colors.",
+	"description" : "Looped version of dark sliding clock made by GrimStorm.",
 	"file" : "index.html",
 	"general" : 
 	{
