--- a/project.json
+++ b/project.json
@@ -1,23 +1,22 @@
 {
-	"contentrating" : "Everyone",
-	"description" : "Looped version of dark sliding clock made by GrimStorm.",
-	"file" : "index.html",
-	"general" : 
-	{
-		"properties" : 
-		{
-			"schemecolor" : 
-			{
-				"order" : 0,
-				"text" : "ui_browse_properties_scheme_color",
-				"type" : "color",
-				"value" : "0 0 0"
+	"contentrating": "Everyone",
+	"description": "Looped version of dark sliding clock made by GrimStorm.",
+	"file": "index.html",
+	"general": {
+		"properties": {
+			"schemecolor": {
+				"order": 0,
+				"text": "ui_browse_properties_scheme_color",
+				"type": "color",
+				"value": "0 0 0"
 			}
-		}
-	},
-	"preview" : "preview.jpg",
-	"tags" : [ "Technology" ],
-	"title" : "Slide Clock",
-	"type" : "web",
-	"visibility" : "public"
+		},
+		"preview": "preview.jpg",
+		"tags": [
+			"Technology"
+		],
+		"title": "Slide Clock",
+		"type": "web",
+		"visibility": "public"
+	}
 }
