--- a/project.json
+++ b/project.json
@@ -9,6 +9,14 @@
 				"text": "ui_browse_properties_scheme_color",
 				"type": "color",
 				"value": "0 0 0"
+			},
+			"animationDelay": {
+				"order": 0,
+				"text": "Animation delay",
+				"type": "slider",
+				"value": 300,
+				"min":1,
+				"max":999
 			}
 		},
 		"preview": "preview.jpg",
